# xeroml-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_client.py  test_e2e.py  test_init.py
xeroml/: __init__.py  async_client.py  client.py  errors.py  session.py  types.py
