[project]
name = "xeroml-sdk"
version = "0.1.0"
description = "XeroML Python SDK — intent parsing and drift detection for AI apps"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests requiring a running API server"]
addopts = "-m 'not e2e'"

[tool.hatch.build.targets.wheel]
packages = ["xeroml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
